--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
 		<table>
 			<tr>
-				<td width=320 colspan=2><p><b>Candidate name:</b> Alexei Garcia </p></td>
+				<td width=320 colspan=2><p><b>Candidate name:</b> Colin Shen </p></td>
 				<td width=400><p><b>School number:&nbsp &nbsp &nbsp</b><u>002140</u></p></td>
 				<td width=200></td>
 			</tr>
 
 			<tr>
-				<td width=320 colspan=2><p><b>Solution title:</b> FractalFrenzy </p></td>
+				<td width=320 colspan=2><p><b>Solution title:</b> StatsSaver </p></td>
 				<td width=400><p><b>Candidate session number:&nbsp &nbsp &nbsp</b><u>0071</u></p></td>
 				<td width=200></td>
 			</tr>
@@ -30,7 +30,7 @@
 			</tr>
 
 			<tr>
-				<td width=320 colspan=2><p><b>User name:</b> Alexei Garcia </p></td>
+				<td width=320 colspan=2><p><b>User name:</b> Colin Shen </p></td>
 				<td width=400></td>
 				<td width=200></td>
 			</tr>
@@ -50,7 +50,7 @@
 	
 			<tr>
 				<td width=320 height=50 colspan=2 valign='top'><p><b>Directions to access product or any other additional information</b></p></td>
-				<td width=400 height=70 bgcolor="gray" valign='top'><p> </p>Copy and run FractalFrenzy.java and FractalMain.java in your preferred IDE if Jar file does not work.</td>
+				<td width=400 height=70 bgcolor="gray" valign='top'><p> </p>Copy and run file and file in your preferred IDE if Jar file does not work.</td>
 				<td width=200></td>
 			</tr>
 	
@@ -182,4 +182,4 @@
 	
 </html>
 Status API Training Shop Blog About
-© 2016 GitHub, Inc. Terms Privacy Security Contact Help
+Â© 2016 GitHub, Inc. Terms Privacy Security Contact Help
