--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<html>
+k<html>
 
 	<head>
-		<title>Computer science Solution cover page</title>
+		<title>Computer Science Solution cover page</title>
 	</head>
 
 	<body lang=EN-GB link=blue vlink=purple>
 		
 		<h2 align=center style='text-align:center'>
-			<span>Computer science Solution cover page</span>
+			<span>Computer Science Solution cover page</span>
 		</h2>
 
 		<table>
@@ -36,7 +36,7 @@
 			</tr>
 
 			<tr>
-				<td width=320 height=50 colspan=2><p><b>Links to product: </b><a href="./Project/FractalFrenzy.jar">FractalFrenzy</a></p></td>
+				<td width=320 height=50 colspan=2><p><b>Links to product: </b><a href="./Project/FractalFrenzy.jar">BrokenLink</a></p></td>
 				<td width=400></td>
 				<td width=200></td>
 			</tr>
@@ -69,7 +69,7 @@
 	
 			<tr>
 				<td width=320 colspan=2><p><b>Planning</b></p></td>
-				<td width=400><a href="./Documentation/Criterion_A_Planning.pdf">Planning</a></td>
+				<td width=400><a href="./Documentation/Criterion_A_Planning.pdf">Planning(Broken Link)</a></td>
 				<td width=200></td>
 			</tr>
 	
@@ -82,13 +82,13 @@
 	
 			<tr>
 				<td width=320 colspan=2><p><b>Design</b></p></td>
-				<td width=400><a href="./Documentation/Criterion_B_Record_of_Tasks.pdf">Record of tasks</a> (use form)</td><tr>
+				<td width=400><a href="./Documentation/Criterion_B_Record_of_Tasks.pdf">Record of tasks(Broken Link)</a> (use form)</td><tr>
 				<td width=200></td>
 			</tr>
 	
 			<tr>
 				<td width=320 colspan=2><p><b></b></p></td>
-				<td width=400><a href="./Documentation/Criterion_B_Design.pdf">Design</a></td><tr>
+				<td width=400><a href="./Documentation/Criterion_B_Design.pdf">Design(Broken Link)</a></td><tr>
 				<td width=200></td>
 			</tr>
 	
@@ -102,7 +102,7 @@
 	
 			<tr>
 				<td width=320 colspan=2><p><b>Development</b></p></td>
-				<td width=400><a href="./Documentation/Criterion_C_Development.pdf">Development</a></td>
+				<td width=400><a href="./Documentation/Criterion_C_Development.pdf">Development(Broken Link)</a></td>
 				<td width=200></td>
 			</tr>
 	
@@ -115,7 +115,7 @@
 	
 			<tr>
 				<td width=320 colspan=2><p><b>Functionality (additional videos may be added)</b></p></td>
-				<td width=400><a href="./Documentation/FractalFrenzy.avi">Video of product</a></td>
+				<td width=400><a href="./Documentation/FractalFrenzy.avi">Video of product(Broken Link)</a></td>
 				<td width=200></td>
 			</tr>
 	
@@ -128,7 +128,7 @@
 	
 			<tr>
 				<td width=320 colspan=2><p><b>Evaluation</b></p></td>
-				<td width=400><a href="./Documentation/Criterion_E_Evaluation.pdf">Evaluation</a></td>
+				<td width=400><a href="./Documentation/Criterion_E_Evaluation.pdf">Evaluation (Broken Link)</a></td>
 				<td width=200></td>
 			</tr>
 	
@@ -141,7 +141,7 @@
 	
 			<tr>
 				<td width=320 colspan=2><p><b>Appendix / appendices</b></p></td>
-				<td width=400><a href="./Source_Code.zip">Appendix A: Source Code</a></td>
+				<td width=400><a href="./Source_Code.zip">Appendix A: Broken Link</a></td>
 				<td width=200></td>
 			</tr>
 	
@@ -154,7 +154,7 @@
 	
 			<tr>
 				<td width=320 colspan=2><p><b></b></p></td>
-				<td width=400><a href="./Documentation/Appendix_B_Fractal_Terminology_and_Notation.pdf">Appendix B: Fractal Terminology and Notation</a></td>
+				<td width=400><a href="./Documentation/Appendix_B_Fractal_Terminology_and_Notation.pdf">Appendix B: Broken Link</a></td>
 				<td width=200></td>
 			</tr>
 	
